Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/8152411/T8152411.out
T8152411.java:16:29: compiler.err.prob.found.req: (compiler.misc.incompatible.upper.bounds: A2, java.lang.String,B,java.lang.Object,java.lang.Integer,A)
1 error
